--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
+#gallery.flex {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+#gallery.flex img {
+  height: 200px;
+}
+
+#name-input {
+  margin-top: 30px;
+}
+
 #validation-input {
   border: 3px solid #bdbdbd;
 }
